tests/NormalTests/paczka1/small_fuzzy/93888196.err
Error in line 6: oAkUZsK A18 74,14
Error in line 9: oAkUZsK A18 13,4
Error in line 8: qBKB A18 71,8
Error in line 15: S83 S787 4,9
